# MyKeylight

./: CMakeLists.txt  Keylight.cpp  Keylight.h  KeylightDiscover.cpp  LICENSE  MyKeylightCLI.cpp  MyKeylightGUI.cpp  MyKeylightMain.cpp  README.md
gui/: mainwindow.ui
